[package]
name = "fontloader"
version = "0.1.0-alpha.0"
description = "Cross platform native font loader"
authors = [
  "Christian Duerr <contact@christianduerr.com>",
  "Joe Wilm <joe@jwilm.com>",
  "Wanwei Song <sww4718168@163.com>"
]
repository = "https://github.com/songww/fontloader.git"
documentation = "https://docs.rs/fontloader"
license = "Apache-2.0"
readme = "README.md"
categories = ["gui", "os"]
keywords = ["font", "fontconfig", "DirectWrite", "CoreText"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
log = "0.4"
libc = "0.2"
thiserror = "1.0"

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
freetype-rs = "0.30"
fontconfig = { version = "0.1.1", path = "../fontconfig-rs", package = "fontconfig-rs" }

[target.'cfg(not(any(target_os = "macos", windows)))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-text = "19"
core-graphics = "0.22"
core-foundation-sys = "0.8"

[target.'cfg(windows)'.dependencies]
dwrote = { version = "0.11" }
winapi = { version = "0.3", features = ["impl-default"] }

[features]
force_system_fontconfig = ["fontconfig/dlopen"]
